# clawdia

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pc_knowledge.yaml  pyproject.toml  pyrightconfig.json  renovate.json
.claude/skills/clawdia-logs/: SKILL.md
.claude/skills/mermaid-render/: SKILL.md
.claude/skills/raspi-deploy/: SKILL.md
.github/workflows/: ci.yml  renovate.yml
docs/: ky-005-manual.md  ky-022-manual.md  logitech-z5500-ir-codes.md  pi-audio-setup.md  samsung-ir-codes.md  wiring.md
docs/plans/: 2026-02-23-clawdia-design.md  2026-02-23-hardware-shopping-list.md  2026-02-24-implementation-plan.md  2026-03-28-build-vs-buy-analysis.md  2026-03-28-pi-setup-log.md  2026-03-28-wiring-log.md
docs/research/: 2026-04-06-voice-improvements.md
docs/superpowers/plans/: 2026-03-30-pc-remote-control.md  2026-03-30-spotify-music-playback.md  2026-03-31-playback-coordinator.md  2026-04-06-voice-pipeline.md
docs/superpowers/specs/: 2026-03-30-pc-remote-control-design.md  2026-03-30-spotify-music-playback-design.md  2026-03-31-playback-coordinator-design.md  2026-04-01-logging-analysis-design.md  2026-04-06-voice-pipeline-design.md
ir-codes/: commands.json  sound_mute.txt  sound_power_toggle.txt  sound_vol_down.txt  sound_vol_up.txt  tv_hdmi1.txt  tv_hdmi2.txt  tv_hdmi3.txt  tv_hdmi4.txt  tv_power_off.txt  tv_power_on.txt  tv_power_toggle.txt  tv_source.txt
scripts/: librespot-gernot.service  librespot-oxana.service  oauth_spotify.py
src/clawdia/: __init__.py  config.py  health.py  log.py  logger_db.py  main.py  orchestrator.py
src/clawdia/brain/: __init__.py  agent.py  models.py
src/clawdia/ir/: __init__.py  controller.py
src/clawdia/music/: __init__.py  controller.py
src/clawdia/pc/: __init__.py  controller.py  knowledge.py
src/clawdia/pc_agent/: __main__.py  actions.py  agent.py
src/clawdia/playback/: __init__.py  coordinator.py
src/clawdia/telegram_bot/: __init__.py  bot.py
src/clawdia/voice/: listener.py  pipeline.py  player.py  stt.py  tts.py
tests/: conftest.py  test_brain.py  test_brain_agent.py  test_brain_models.py  test_brain_prompt.py  test_config.py  test_ir.py  test_listener.py  test_logger_db.py  test_music_controller.py  test_music_models.py  test_music_orchestrator.py  test_music_telegram.py  test_orchestrator.py  test_pc_agent.py  test_pc_agent_actions.py  test_pc_controller.py  test_pc_knowledge.py  test_pc_models.py  test_pc_orchestrator.py  test_playback_coordinator.py  test_player.py  test_stt.py  test_telegram.py  test_tts.py  test_voice_pipeline.py
