[project]
name = "clawdia"
version = "0.1.0"
description = "Open-source Raspberry Pi voice assistant with IR TV control"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai-slim[openrouter]>=1.0",
    "openai>=2.30.0",
    "python-telegram-bot>=22.0",
    "httpx>=0.27",
    "spotipy>=2.24",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "loguru>=0.7",
]

[project.optional-dependencies]
voice = [
    "openwakeword>=0.6",
    "pyaudio>=0.2",
    "numpy>=1.24",
    "scipy>=1.10",
]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "ruff>=0.8",
]

[project.scripts]
clawdia = "clawdia.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawdia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "hardware: requires native hardware or attached peripherals",
    "pi: requires execution on the Raspberry Pi environment",
]
addopts = [
    "--cov=clawdia",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = ["src/clawdia"]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S",
]

[tool.ruff.lint.mccabe]
max-complexity = 35

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 35
max-statements = 130

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "B017"]
"scripts/oauth_spotify.py" = ["E402"]
"src/clawdia/main.py" = ["C901", "PLR0912", "PLR0915"]
"src/clawdia/orchestrator.py" = ["C901", "PLR0912", "PLR0915"]
"src/clawdia/pc_agent/actions.py" = ["S108"]
"src/clawdia/telegram_bot/bot.py" = ["S110"]
